<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
    <string name="cancel">Cancel</string>

</resources>
